@@ -13,7 +13,9 @@ Improvements:
    * Function to rotate an evas map with a quaternion: evas_map_util_quat_rotate().
 
 Fixes:
+
    * Fix segmentation fault with the esvg loader.
+   * Fix EGL/GLES dest alpha rendering bug (no rendering).
 
 Evas 1.7.0
 
