@@ -1024,3 +1024,8 @@
 2012-09-05  ChunEon Park (Hermet)
 
        * Added EVAS_CALLBACK_IMAGE_RESIZE. Now user have a notify when image data size of the image object is changed.
+
+2012-09-05  Carsten Haitzler (The Rasterman)
+
+       * Fix EGL/GLES bug when setting up rgba dest alpha windows where they
+       cease to be rendered to. use a shared context and it works.
